@@ -1,3 +1,4 @@
+13-nov-2009 - mart0258 - Win32 - TASEdit - Added interface functionality (save/load, running TASEdit mid-movie, etc.)
 13-nov-2009 - adelikat - made savestate compression togglable
 13-nov-2009 - adelikat - made savestate backups togglable
 08-nov-2009 - gocha - Win32 - Lua console - added a menu
